--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 """
-Python dependencies
+Environment variables template
 
 TODO: Paste the code for this file here
 TODO: Remember to commit after adding code!
